--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,6 @@
 #####################################################
 #                                                   #
-#               Nicky v1.0.2 - Remastered           #
+#               Nicky v1.0.3 - Remastered           #
 #     Credits to the original author, Melonking     #
 #           github.com/AlbeMiglio/Nicky             #
 #                                                   #
@@ -19,7 +19,7 @@ unique: true                      #    Should all nicknames be unique?
 prefix: "&e~"                     #    Add a prefix before nicknames? (Set to '' to disable)
 min-length: 3
 max-length: 20
-characters: "[^a-zA-Z0-9_§]"      #    RegEx for characters allowed in a nickname. (Set to '' to allow every character)
+characters: "[^a-zA-Z0-9_&]"      #    RegEx for characters allowed in a nickname. (Set to '' to allow every character)
 blacklist:                        #    Write here words that cannot appear in any nickname.
   - Melonking                     #    Bypass the blacklist with the permission 'nicky.noblacklist'
   - AlbeMiglio
